--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,22 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+        <id>sonar</id>
+        <activation>
+            <activeByDefault>true</activeByDefault>
+        </activation>
+        <properties>
+            <sonar.jdbc.url>
+            jdbc:mysql://192.168.1.160:5432/sonarqube?useUnicode=true&amp;characterEncoding=utf8
+            </sonar.jdbc.url>
+            <sonar.jdbc.username>sonarqube</sonar.jdbc.username>
+            <sonar.jdbc.password>password</sonar.jdbc.password>
+            <sonar.host.url>http://192.168.1.114:9000</sonar.host.url>
+        </properties>
+        </profile>
+
     </profiles>
 
     <dependencies>
